Cabal-Version:      2.4
Name:               stsc3-som
Version:            0.20
License:            GPL-3.0-only
Category:           Sound
Copyright:          (c) Rohan Drape, 2019-2022
Author:             Rohan Drape
Maintainer:         rd@rohandrape.net
Stability:          Experimental
Homepage:           http://rohandrape.net/t/stsc3-som
Tested-With:        GHC == 8.8.4
Build-Type:         Simple

library
  build-depends:    base >= 4.7 && < 5,
                    containers,
                    directory,
                    hashable,
                    hmt-base == 0.20.*,
                    mtl,
                    random,
                    stsc3 == 0.20.*,
                    text,
                    time,
                    vector
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  exposed-modules:  Interpreter.Som.Core
                    Interpreter.Som.Dict
                    Interpreter.Som.DictRef
                    Interpreter.Som.Error
                    Interpreter.Som.Int
                    Interpreter.Som.Primitives.Smalltalk
                    Interpreter.Som.Primitives.Som
                    Interpreter.Som.Ref
                    Interpreter.Som.Repl
                    Interpreter.Som.Str
                    Interpreter.Som.Str.Text
                    Interpreter.Som.Sym
                    Interpreter.Som.Sys
                    Interpreter.Som.Tbl
                    Interpreter.Som.Types
                    Interpreter.Som.Vec

executable stsc3-som
  build-depends:    base >= 4.8 && < 5,
                    stsc3 == 0.20.*,
                    stsc3-som
  hs-source-dirs:   cmd
  main-is:          stsc3-som.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs -threaded
